@@ -1,4 +1,5 @@
 /**
  * Provides TCP/UDP Component support for the Java DSL.
  */
+@org.springframework.lang.NonNullApi
 package org.springframework.integration.ip.dsl;
