@@ -1,0 +1,38 @@
+/*
+ * Copyright 2020 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.springframework.integration.ip.udp;
+
+import java.net.DatagramSocket;
+import java.net.SocketException;
+
+/**
+ * Configures a socket.
+ *
+ * @author Gary Russell
+ * @since 5.3.3
+ */
+@FunctionalInterface
+public interface SocketCustomizer {
+
+	/**
+	 * Configure the socket ({code setTrafficClass()}, etc).
+	 * @param socket the socket.
+	 * @throws SocketException a socket exception.
+	 */
+	void configure(DatagramSocket socket) throws SocketException;
+
+}
